tests/negative/missing_do_while.c
int main(void) { do { return 0; } }
